  configuration.

* On Linux, a new tunable, glibc.malloc.hugetlb, can be used to
  either make malloc issue madvise plus MADV_HUGEPAGE on mmap and sbrk
  or to use huge pages directly with mmap calls with the MAP_HUGETLB
  flags).  The former can improve performance when Transparent Huge Pages
  is set to 'madvise' mode while the latter uses the system reserved
  huge pages.

Deprecated and removed features, and other changes affecting compatibility:

* On x86-64, the LD_PREFER_MAP_32BIT_EXEC environment variable support
  has been removed since the first PT_LOAD segment is no longer executable
  due to defaulting to -z separate-code.

* The r_version update in the debugger interface makes the glibc binary
  incompatible with GDB binaries built without the following commits:

  c0154a4a21a gdb: Don't assume r_ldsomap when r_version > 1 on Linux
  4eb629d50d4 gdbserver: Check r_version < 1 for Linux debugger interface

  when audit modules or dlmopen are used.

* Intel MPX support (lazy PLT, ld.so profile, and LD_AUDIT) has been removed.

* The --enable-static-pie option is no longer available.  The glibc build
  configuration script now automatically detects static-pie support in the
  toolchain and architecture and enables it if available.

Changes to build and runtime requirements:

  [Add changes to build and runtime requirements here]

Security related changes:

  [Add security related changes here]

The following bugs are resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]


Version 2.34

Major new features:

* In order to support smoother in-place-upgrades and to simplify
  the implementation of the runtime all functionality formerly
  implemented in the libraries libpthread, libdl, libutil, libanl has
  been integrated into libc.  New applications do not need to link with
  -lpthread, -ldl, -lutil, -lanl anymore.  For backwards compatibility,